--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/joy": "^5.0.0-alpha.58",
+    "@mui/material": "^5.11.0",
     "framer-motion": "^7.6.19",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
