--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@headlessui/react": "^1.7.7",
+    "@heroicons/react": "^2.0.13",
     "@mui/joy": "^5.0.0-alpha.58",
     "@mui/material": "^5.11.0",
     "framer-motion": "^7.6.19",
